[package]
name = "tul"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6" }
worker-macros = { version = "0.6" }
console_error_panic_hook = { version = "0.1.7" }
futures = "0.3"
futures-util = "0.3.31"
wasm-bindgen = "0.2"
tokio = { version = "1.47.1", features = ["io-util", "sync"], default-features = false }
regex = "1"
http = "1.3"
reqwest = { version ="0.12" }
getrandom = { version = "0.2", features = ["js"] }
async-trait = "0.1"
sha2 = "0.10"
pin-project-lite = "0.2"
base64 = "0.22"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1


[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--all-features"]